# sunshower

./: .gitignore  README.md  example.ipynb  example.yaml  pyproject.toml  requirements.txt  results.md
.github/workflows/: ci-pipeline.yaml  integrate.yaml  publish.yaml
.grype/: config.yaml
sunshower/: core.py  engine.py  models.py  profiles.py  schema.py  utils.py
