[project]
name = "pySunshower"
version = "0.0.1"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "python-dotenv",
    "python-whois",
    "ray",
    "pyyaml"
]
requires-python = ">=3.12"
authors = [
  { name="Vic Fernandez III", email="victor@deathlabs.io" },
]
maintainers = [
  { name="Vic Fernandez III", email="victor@deathlabs.io" },
]
description = "A Python library for evaluating AI agents in a declarative way"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/deathlabs/sunshower"
Issues = "https://github.com/deathlabs/sunshower/issues"
