[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "pySunshower"
version = "0.0.1"
description = "pySunshower is a Python library for evaluating AI agents in a declarative way"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "python-dotenv",
    "python-whois",
    "ray",
    "pyyaml"
]
authors = [
  { name="Vic Fernandez III", email="victor@deathlabs.io" },
]
maintainers = [
  { name="Vic Fernandez III", email="victor@deathlabs.io" },
]
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/deathlabs/sunshower"
Issues = "https://github.com/deathlabs/sunshower/issues"
